# Lithium

./: .gitignore  CMakeLists.txt  Dockerfile  start.sh
include/: Definitions.h
include/server/: Server.h
include/util/: Util.h
script/: buildserver.sh  deploy
scripts/: buildclient.sh  buildserver.sh  startserver.sh
src/: Server.cpp  Util.cpp  main.cpp  udpclient.c  udpserver.c
src/server/: server.py  udpserver.c
src/test/: test_Server.cpp
test/: runUnitTests
test/server/: udpserver.c
xcode/: CTestTestfile.cmake
xcode/Lithium.xcodeproj/: project.pbxproj
xcode/Lithium.xcodeproj/project.xcworkspace/xcuserdata/dmorton.xcuserdatad/: UserInterfaceState.xcuserstate
xcode/Lithium.xcodeproj/xcuserdata/dmorton.xcuserdatad/xcschemes/: ALL_BUILD.xcscheme  RUN_TESTS.xcscheme  Server.xcscheme  ZERO_CHECK.xcscheme  gmock.xcscheme  gmock_main.xcscheme  gtest.xcscheme  gtest_main.xcscheme  install.xcscheme  lithium.xcscheme  runUnitTests.xcscheme  xcschememanagement.plist
