CMAKE_MINIMUM_REQUIRED(VERSION 2.8)
PROJECT(Lithium)

SET(SOURCES
  src/udpserver.c
  )

SET(EXECUTABLE Lithium)

ADD_EXECUTABLE(${EXECUTABLE} ${SOURCES})

SET(EXECUTABLE_OUTPUT_PATH ${CMAKE_SOURCE_DIR}/Server)

SET_TARGET_PROPERTIES(${EXECUTABLE} PROPERTIES
	RUNTIME_OUTPUT_DIRECTORY_DEBUG          ${CMAKE_SOURCE_DIR}/Server
	RUNTIME_OUTPUT_DIRECTORY_RELEASE        ${CMAKE_SOURCE_DIR}/Server
  )

#SET_TARGET_PROPERTIES(${EXECUTABLE} PROPERTIES DEBUG_POSTFIX "_debug")
